Bug 406812 - Ark unnecessarily adds "_1" to the file name when you compress a folder via Dolphin using "Compress to..." feature
Summary: Ark unnecessarily adds "_1" to the file name when you compress a folder via D...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-23 14:31 UTC by Patrick Silva
Modified: 2019-05-05 10:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.1
Sentry Crash Report:


Attachments
screen recording (1.32 MB, video/webm)
2019-04-23 14:31 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-04-23 14:31:03 UTC
Created attachment 119590 [details]
screen recording

Summary says by itself.
Watch the screen recording please.

EXPECTED RESULT
do not add "_1" to the file name

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.13.0 beta2


ADDITIONAL INFORMATION
Comment 1 Elvis Angelaccio 2019-05-05 10:48:30 UTC
Git commit 1ef618e56ad7b71be2e1ead2abf3b7dba93dd2e3 by Elvis Angelaccio.
Committed on 05/05/2019 at 10:43.
Pushed by elvisangelaccio into branch 'Applications/19.04'.

AddToArchive: fix filename preset for folders

We can't use detectFileName() here because we don't have the filename
suffix yet, so the function would assume the folder filename is also the
destination filename, appending '_1'.

detectBaseName() is enough for our purpose, which is just to preset a
filename in the dialog.
FIXED-IN: 19.04.1

M  +1    -1    kerfuffle/addtoarchive.cpp

https://commits.kde.org/ark/1ef618e56ad7b71be2e1ead2abf3b7dba93dd2e3