AddToArchive: fix filename preset for folders

We can't use detectFileName() here because we don't have the filename
suffix yet, so the function would assume the folder filename is also the
destination filename, appending '_1'.

detectBaseName() is enough for our purpose, which is just to preset a
filename in the dialog.

BUG: 406812
FIXED-IN: 19.04.1